h1. CHANGELOG

h2. 2.2.3 August 27, 2012

* fix 'setup', 'frontend', and 'controllers' recipes to allow CanCan authorization when OmniAuth authentication is selected

h2. 2.2.2 August 26, 2012

* fix 'prelaunch' recipe for missing Cucumber feature file
* improve an error message when Mongoid is selected and a SQLite gem is present

h2. 2.2.1 August 26, 2012

* fix regression introduced by 1cf28c09cc4a8d11f2f1a7e5b91fce724d0a9b73 (version 2.1.10)

h2. 2.2.0 August 26, 2012

* merge 'auth' recipe into 'models' recipe
* move 'form_builder' ingredient from 'extras' recipe to 'setup' recipe
* add 'prelaunch' recipe for rails-prelaunch-signup example app

h2. 2.1.10 August 25, 2012 

* update 'railsapps' recipe to allow choice of erb or Haml for all example apps
* fix 'models', 'auth', and 'init' recipes to handle Devise confirmable module (contributed by Vitaly Kushner)
* fix 'setup' recipe to exclude CanCan authorization when OmniAuth authentication is selected
* update gem 'twitter-bootstrap-rails' from 2.1.1 to 2.1.3
* update gem 'omniauth' from 1.1.0 to 1.1.1
* update gem 'mongoid' from 3.0.4 to 3.0.5

h2. 2.1.9 August 20, 2012

* option to set '-T' or '-O' args in a default file (contributed by Michaël Witrant)

h2. 2.1.8 August 18, 2012

* add option to 'extras' recipe to create a GitHub repo
* fix errors in recipes to implement 'subdomains_app'
* fix 'gems' recipe to set database names for MySQL or PostgreSQL (contributed by Tom Scott)

h2. 2.1.7 August 17, 2012

* update 'gems' recipe to create MySQL database
* update 'gems' and 'frontend' recipe to fix 'foundation'
* update 'gems' so webserver gem is only installed once when production and dev are the same

h2. 2.1.6 August 14, 2012

* update 'gems' recipe to create PostgreSQL user and database 
* update 'gems' and 'frontend' recipes to use 'foundation' generator

h2. 2.1.5 August 14, 2012

* fix 'gems' recipe to modify database.yml except when 'mongoid' is selected