@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.2.3"
+  VERSION = "2.2.4"
 end
